--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,12 @@ comments: true
 title:  "Adding MathJax to a GitHub Pages Jekyll Blog"
 categories: github jekyll
 ---
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
+
 {% include mathjax.html %}
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
