--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sindy Löwe | PhD Candidate at University of Amsterdam</title>
+    <title>Julen Urain | PhD Candidate at TU Darmstadt</title>
     <link rel="icon" href="img/favicon-32x32.png" type="image/png">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
