--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,224 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-    <script>
-        window.onbeforeunload = function () {
-        window.scrollTo(0, 0);
-        }
-    </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159075680-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  {% include head.html %}
 
-      gtag('config', 'UA-159075680-1');
-    </script>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Julen Urain | PhD Candidate at TU Darmstadt</title>
-    <link rel="icon" href="img/favicon-32x32.png" type="image/png">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
-    <!-- main style -->
-    <link href="css/style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
+  <body>
 
-<body>
+    {% include header.html %}
 
-    <div id="top"></div>
-
-    <!-- Preloader -->
-    <div id="preloader">
-        <div id="status">
-
-            <div class="preloader" aria-busy="true" aria-label="Loading, please wait." role="progressbar">
-            </div>
-
-        </div>
+    <div class="page-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
     </div>
-    <!-- ./Preloader -->
 
-    <!-- home -->
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
-        <div class="container">
-            <div class="disply-table">
-                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>PhD Candidate Machine Learning </h4>
-                    <h1>Sindy Löwe<br /></h1> </div>
-            </div>
-        </div>
-    </div>
-    <!-- ./home -->
+    {% include footer.html %}
 
-    <!-- header -->
-    <header class="navbar-fixed-top">
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#publications">Publications</a></li>
-                <li><a href="#contact">contact</a></li>
-                |
-                <li><a href="GreedyInfoMax.html">Blog</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- ./header -->
-
-
-    <!-- about -->
-    <div class="section" id="about">
-        <div class="container">
-            <div class="col-md-6" data-aos="fade-up">
-                <h4>01</h4>
-                <h1 class="size-50">About me</h1>
-                <div class="h-50"></div>
-                <p> I am a first year PhD student in Machine Learning at the University of Amsterdam, supervised by <a href="https://staff.fnwi.uva.nl/m.welling/" target='blank'>Prof. Max Welling</a>. I am interested in self-supervised representation learning, focussing on mutual information maximization approaches and on structured representations. </p>
-                <p> Before finding my way into Machine Learning, I completed a BSc in Cognitive Science at the University of Tübingen. During this study, I worked at the <a href="https://www.mpg.de/152075/biologische-kybernetik" target='blank'> Max Planck Institute for Biological Cybernetics</a> conducting research on the representation of visual percepts in the neuronal activity of rodents. After completing a BSc in Informatics at the University of Tübingen, I graduated with a MSc in Artificial Intelligence at the University of Amsterdam.
-                <div class="h-5"></div>
-                <a href="CV_SindyLowe.pdf" target='blank'><p class="mybutton">Download CV</p></a>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-6 about-img-div">
-                <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
-                <img src="img/me_pic.jpg" width="400" class="img-responsive" alt="Sindy Löwe, Sindy Lowe, Sindy Loewe" align="right" data-aos="fade-right" data-aos-delay="0" />
-            </div>
-        </div>
-    </div>
-    <!-- ./about -->
-
-    <!-- publications  -->
-    <div class="section" id="publications">
-        <div class="container">
-            <div class="col-md-12">
-                <h4>02</h4>
-                <h1 class="size-50">Publications</h1>
-                <div class="h-50"></div>
-            </div>
-            <div class="col-md-12">
-                <ul class="timeline">
-                    <li class="timeline-event" data-aos="fade-up">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">NeurIPS 2019</p>
-                            <h3>Putting An End to End-to-End: Gradient-Isolated Learning of Representations</h3>
-                            <h4>Honorable Mention for Outstanding New Directions Paper Award</h4>
-                            <p><strong>Sindy Löwe*</strong>, Peter O'Connor, Bastiaan S. Veeling*<br><br>
-                            We show that we can train a neural network without end-to-end backpropagation and achieve competitive performance.<br>
-                            [<a href="https://arxiv.org/abs/1905.11786" target='blank'>Link</a>,
-                            <a href="https://arxiv.org/pdf/1905.11786.pdf" target='blank'>PDF(arXiv)</a>,
-                            <a href="https://github.com/loeweX/Greedy_InfoMax" target='blank'>Code</a>,
-                            <a href="GreedyInfoMax.html">Blog</a>,
-                            <a href="https://slideslive.com/38923276/putting-an-end-to-endtoend-gradientisolated-learning-of-representations" target='blank'>Video</a>] <br><br>
-                            An earlier version of this paper was accepted at the ICML Workshop for Self-Supervised Learning (2019).<br>
-                            [<a href="ICML_Greedy_InfoMax.pdf" target='blank'>PDF</a>, <a href="https://sites.google.com/view/self-supervised-icml2019" target='blank'>Link to Workshop Site</a>]
-                            </p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">Master's Thesis (2019)</p>
-                            <h3>Greedy InfoMax for Self-Supervised Representation Learning</h3>
-                            <div class="h-25"></div>
-                            <p><strong>Sindy Löwe</strong><br><br>
-                            Resulted in publication: <br>
-                            "Putting An End to End-to-End: Gradient-Isolated Learning of Representations" <br>
-                            [<a href="Thesis_SindyLoewe_GreedyInfoMax.pdf" target='blank'>PDF</a>]
-                            </p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">VISAPP 2019</p>
-                            <h3>Improving Unsupervised Defect Segmentation by Applying Structural Similarity to Autoencoders</h3>
-                            <div class="h-25"></div>
-                            <p>Paul Bergmann, <strong>Sindy Löwe</strong>, Michael Fauser, David Sattlegger, Carsten Steger <br><br>
-                            Illustrating the shortcomings of pixel-wise reconstruction errors when using autoencoders for unsupervised defect segmentation on image data and proposing to use a perceptual loss based on structural similarity. <br>
-                            [<a href="https://arxiv.org/abs/1807.02011" target='blank'>Link</a>,
-                            <a href="https://arxiv.org/pdf/1807.02011.pdf" target='blank'>PDF(arXiv)</a>]
-                            </p>
-                        </div>
-                    </li>
-                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
-                        <label class="timeline-event-icon"></label>
-                        <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">Extended Abstract at Neuroscience 2015</p>
-                            <h3>Temporal predictability of visual target onset by audition leads to decrease in evoked neural activity in mouse V1</h3>
-                            <div class="h-25"></div>
-                            <p><strong>Sindy Löwe</strong>, Masataka Watanabe, Nikos Logothetis, Laura Busse, Steffen Katzner <br><br>
-                            Investigating how temporal predictability affects the processing of a visual stimulus by measuring the responses of single neurons in the mouse primary visual cortex (V1). <br>
-                            [<a href="https://pure.mpg.de/pubman/faces/ViewItemOverviewPage.jsp?itemId=item_2272267" target='blank'>Link</a>]
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- ./experience -->
-
-    <!-- contact -->
-    <div class="section" id="contact">
-        <div class="container">
-            <div class="col-md-12">
-                <h1 class="size-50">Contact</h1>
-                <div class="h-25"></div>
-            </div>
-            <div class="col-md-4" data-aos="fade-up">
-
-                <p>Sindy Löwe </p>
-                <div class="h-25"></div>
-
-                <p>LOEWE [dot] SINDY [at] GMAIL [dot] com </p>
-                <div class="h-25"></div>
-
-                <p> AMLab, University of Amsterdam </p>
-                <p> Science Park 904, 1098 XH Amsterdam, The Netherlands </p>
-
-                <ul class="social"> <!-- find icons here: https://ionicons.com/v2/ -->
-                    <li><a href="https://scholar.google.com/citations?user=lZZIP9UAAAAJ&hl=en&oi=ao" target='blank'><i class="ion-university"></i></a></li>
-                    <li><a href="https://github.com/loeweX" target='blank'><i class="ion-social-github"></i></a></li>
-                    <li><a href="https://twitter.com/sindy_loewe" target='blank'><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/sindy-loewe/" target='blank'><i class="ion-social-linkedin"></i></a></li>
-                </ul>
-                <div class="clearfix"></div>
-                <div class="h-50"></div>
-                <div class="h-50"></div>
-
-                <!-- copyright -->
-                &copy; 2019 Sindy Löwe
-                <span style="display:inline-block; width: 50px;"></span>
-                Design: <a href="https://www.free-css.com/free-css-templates" target='blank'>Free CSS</a>
-            </div>
-        </div>
-    </div>
-    <!-- ./contact -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-    <!--  plugins  -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-
-    <!--  main script  -->
-    <script src="js/custom.js"></script>
-</body>
+  </body>
 
 </html>
