added cool design

--- a/_layouts/default_alternative.html
+++ b/_layouts/default_alternative.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Julen Urain | PhD Candidate at TU Darmstadt</title>
-    <link rel="icon" href="img/favicon-32x32.png" type="image/png">
+    <!-- <link rel="icon" href="img/favicon-32x32.png" type="image/png"> -->
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
@@ -56,8 +56,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>PhD Candidate Machine Learning </h4>
-                    <h1>Sindy Löwe<br /></h1> </div>
+                    <h4>PhD Candidate Robot Learning </h4>
+                    <h1>Julen Urain<br /></h1> </div>
             </div>
         </div>
     </div>
