--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resume</title>
+    <title>{{page.title}}</title>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
         </div>
     </div>
     <!-- ./Preloader -->
-    
+
     <!-- header -->
     <header class="navbar-fixed-top">
         <nav>
@@ -47,7 +47,7 @@
         </nav>
     </header>
     <!-- ./header -->
-    
+
     <!-- home -->
     <div class="section" id="home" data-stellar-background-ratio="0.5">
         <div class="container">
@@ -59,7 +59,7 @@
         </div>
     </div>
     <!-- ./home -->
-    
+
     <!-- about -->
     <div class="section" id="about">
         <div class="container">
@@ -79,7 +79,7 @@
         </div>
     </div>
     <!-- ./about -->
-    
+
     <!-- experience  -->
     <div class="section" id="experience">
         <div class="container">
@@ -124,13 +124,13 @@
         </div>
     </div>
     <!-- ./experience -->
-    
+
     <!-- projects -->
     <div class="section" id="projects">
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Projects</h1> 
+                <h1 class="size-50">My <br /> Projects</h1>
             </div>
             <!-- main container -->
             <div class="main-container portfolio-inner clearfix">
@@ -151,7 +151,7 @@
                             </nav>
                         </div>
                         <!-- portfolio_filter -->
-                        
+
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
@@ -165,7 +165,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 ads graphics">
                                 <a id="demo02" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
@@ -177,7 +177,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 photography">
                                 <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
@@ -189,7 +189,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 fashion ads">
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
@@ -201,7 +201,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 graphics ads">
                                 <a id="demo05" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
@@ -213,7 +213,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 photography">
                                 <a id="demo06" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
@@ -225,7 +225,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 graphics ads">
                                 <a id="demo07" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
@@ -237,7 +237,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 graphics ads">
                                 <a id="demo08" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
@@ -249,7 +249,7 @@
                                 </a>
                             </div>
                             <!-- end single work -->
-                            
+
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 graphics ads">
                                 <a id="demo09" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
@@ -272,7 +272,7 @@
         </div>
     </div>
     <!-- ./projects -->
-    
+
     <!-- contact -->
     <div class="section" id="contact">
         <div class="container">
