--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -40,9 +40,10 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">experience</a></li>
-                <li><a href="#projects">projects</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#experience">Publications</a></li>
+                <li><a href="#projects">Contact</a></li>
+                |
+                <li><a href="#contact">blog</a></li>
             </ul>
         </nav>
     </header>
@@ -53,8 +54,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Ahmed Eissa</h4>
-                    <h1>Ui &<br /> Ux Designer</h1> </div>
+                    <h4>Julen Urain</h4>
+                    <h1>PhD Student in Robot Learning</h1> </div>
             </div>
         </div>
     </div>
