--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -54,8 +54,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>Julen Urain</h4>
-                    <h1>PhD Student in Robot Learning</h1> </div>
+                    <h4>PhD student in Robot Learning</h4>
+                    <h1>Julen Urain</h1> </div>
             </div>
         </div>
     </div>
@@ -66,9 +66,9 @@
         <div class="container">
             <div class="col-md-6" data-aos="fade-up">
                 <h4>01</h4>
-                <h1 class="size-50">Know <br /> About me</h1>
+                <h1 class="size-50"> About me</h1>
                 <div class="h-50"></div>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
+                <p>I am a PhD student in Robot Learning at the Technisque University of Darmstadt under the supervision of Jan Peters.</p>
                 <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
