added background pic

--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -68,9 +68,8 @@
                 <h4>01</h4>
                 <h1 class="size-50"> About me</h1>
                 <div class="h-50"></div>
-                <p>I am a PhD student in Robot Learning at the Technisque University of Darmstadt under the supervision of Jan Peters.</p>
+                <p>I am a PhD student in Robot Learning at the Techse University of Darmstadt under the supervision of Jan Peters.</p>
                 <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
-                <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -81,12 +80,12 @@
     </div>
     <!-- ./about -->
 
-    <!-- experience  -->
+    <!-- publications  -->
     <div class="section" id="experience">
         <div class="container">
             <div class="col-md-12">
                 <h4>02</h4>
-                <h1 class="size-50">My <br /> Experience</h1>
+                <h1 class="size-50">My <br /> Publications</h1>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-12">
@@ -124,7 +123,7 @@
             </div>
         </div>
     </div>
-    <!-- ./experience -->
+    <!-- ./publications -->
 
     <!-- projects -->
     <div class="section" id="projects">
