--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>PhD student in Robot Learning</h4>
+                    <h4>PhD candidate Robot Learning</h4>
                     <h1>Julen Urain</h1> </div>
             </div>
         </div>
