--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -126,7 +126,7 @@
     <!-- ./publications -->
 
     <!-- projects -->
-    <div class="section" id="projects">
+    <div class="section" id="blog">
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
@@ -142,11 +142,11 @@
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".photography">Photography</a></li>
-                                    <li><a href="" data-filter=".logo">Logo</a></li>
-                                    <li><a href="" data-filter=".graphics">Graphics</a></li>
-                                    <li><a href="" data-filter=".ads">Advertising</a></li>
-                                    <li><a href="" data-filter=".fashion">Fashion</a></li>
+                                    <li><a href="" data-filter=".photography">Stability</a></li>
+                                    <li><a href="" data-filter=".logo">Optimal Control</a></li>
+                                    <li><a href="" data-filter=".graphics">Imitation Learning</a></li>
+                                    <li><a href="" data-filter=".ads">Reinforcement Learning</a></li>
+                                    <li><a href="" data-filter=".fashion">Representation Learning</a></li>
                                 </ul>
                             </nav>
                         </div>
