--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,13 @@ h1 {
     line-height: 70px;
 }
 
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 80px;
+    line-height: 70px;
+    color: #FFFFFF
+}
+
 h4 {
     font-family: 'Lato', sans-serif;
     text-transform: capitalize;
