main header new

--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -39,11 +39,15 @@
     <header class="navbar-fixed-top">
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Publications</a></li>
-                <li><a href="#projects">Contact</a></li>
                 |
-                <li><a href="#contact">blog</a></li>
+                <li><a href="#about">About</a></li>
+                |
+                <li><a href="#experience">Publications</a></li>
+                |
+                <li><a href="#projects">Blogs</a></li>
+                |
+                <li><a href="#contact">Contact</a></li>
+                |
             </ul>
         </nav>
     </header>
