--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -59,7 +59,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>PhD candidate Robot Learning</h4>
-                    <h6>Julen Urain</h6> </div>
+                    <h1:white>Julen Urain</h1:white> </div>
             </div>
         </div>
     </div>
