--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -73,7 +73,7 @@
                 <h1 class="size-50"> About me</h1>
                 <div class="h-50"></div>
                 <p>I am a PhD student in Robot Learning at the Technische Universität Darmstadt, supervised by <a href="https://www.ias.informatik.tu-darmstadt.de/Member/JanPeters" target='blank'>Prof. Jan Peters</a>.
-                My interests are in Imitation Learning, in particular, in Representation Learning and Inductive Bias for Robotics.</p>
+                My interests are in Imitation Learning, in particular, in Representation Learning and Inductive Bias for Robotics and Sequential Decision Making.</p>
                 <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
                 <div class="h-50"></div>
             </div>
