--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1:white {
     font-family: 'Playfair Display', serif;
     font-size: 80px;
     line-height: 70px;
-    color: #FFFFFF
+    color: #000000
 }
 
 h4 {
