--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -72,9 +72,11 @@
                 <h4>01</h4>
                 <h1 class="size-50"> About me</h1>
                 <div class="h-50"></div>
-                <p>I am a PhD student in Robot Learning at the Technische Universität Darmstadt, supervised by <a href="https://www.ias.informatik.tu-darmstadt.de/Member/JanPeters" target='blank'>Prof. Jan Peters</a>.
+                <p>I am a PhD student in Robot Learning at the Technische Universität Darmstadt(Germany), supervised by <a href="https://www.ias.informatik.tu-darmstadt.de/Member/JanPeters" target='blank'>Prof. Jan Peters</a>.
                 My interests are in Imitation Learning, in particular, in Representation Learning and Inductive Bias for Robotics and Sequential Decision Making.</p>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                <p>Before my PhD, I completed a BSc in Physics & Electronics in UPV(Spain) and a MSc in Robotics and Control in UPC(Spain).
+                   I did my master thesis in Human-Robot Interaction in EPFL(Switzerland) in <a href="https://www.epfl.ch/labs/biorob/ " target='blank'>Biorobotics lab</a></p> under the supervsion of Prof. Auke Ijspeert and PhD. Jessica Lanini.
+                   After graduation, I took part in the Deep Learning and Robotics Challenge in <a href="https://datalab-munich.com/" target='blank'>VW Data:Lab</a></p> and worked for a year in a IK4(Spain), a Research Institute in Spain. 
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
