--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -59,7 +59,7 @@
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h4>PhD candidate Robot Learning</h4>
-                    <h1:white>Julen Urain De Jesus</h1:white> </div>
+                    <h1><span class='W'>Julen Urain</span></h1> </div>
             </div>
         </div>
     </div>
@@ -76,7 +76,7 @@
                 My interests are in Imitation Learning, in particular, in Representation Learning and Inductive Bias for Robotics and Sequential Decision Making.</p>
                 <p>Before my PhD, I completed a BSc in Physics & Electronics in UPV(Spain) and a MSc in Robotics and Control in UPC(Spain).
                    I did my master thesis in Human-Robot Interaction in EPFL(Switzerland) in <a href="https://www.epfl.ch/labs/biorob/ " target='blank'>Biorobotics lab</a></p> under the supervsion of Prof. Auke Ijspeert and PhD. Jessica Lanini.
-                   After graduation, I took part in the Deep Learning and Robotics Challenge in <a href="https://datalab-munich.com/" target='blank'>VW Data:Lab</a></p> and worked for a year in a IK4(Spain), a Research Institute in Spain. 
+                   After graduation, I took part in the Deep Learning and Robotics Challenge in <a href="https://datalab-munich.com/" target='blank'>VW Data:Lab</a></p> and worked for a year in a IK4(Spain), a Research Institute in Spain.
                 <div class="h-50"></div>
             </div>
             <div class="col-md-6 about-img-div">
