--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ h1 {
 }
 .W{
     color: #FFFFFF
+    font-weight: bold
 }
 
 h4 {
@@ -285,7 +286,7 @@ a.active {
 ==================================================*/
 
 #home {
-    background: url(../Figures/main_desat.jpg);
+    background: url(../Figures/main.jpg);
     background-size: cover;
     height: 100vh;
 }
