remember punto coma

--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,8 @@ h1 {
     line-height: 70px;
 }
 .W{
-    color: #FFFFFF
-    font-weight: bold
+    color: #FFFFFF;
+    font-weight: bold;
 }
 
 h4 {
