--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -58,8 +58,11 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4>PhD candidate Robot Learning</h4>
-                    <h1><span class='W'>Julen Urain</span></h1> </div>
+                    <h4> </h4>
+                    <h4> </h4>
+                    <h4> </h4>
+                    <h1><span class='W'>Julen Urain</span></h1>
+                    <h4>PhD candidate Robot Learning</h4></div>
             </div>
         </div>
     </div>
