--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="col-md-12">
                 <h4>02</h4>
-                <h1 class="size-50">My <br /> Publications</h1>
+                <h1 class="size-50"><br /> Publications</h1>
                 <div class="h-50"></div>
             </div>
             <div class="col-md-12">
@@ -114,6 +114,36 @@
                             <h3>Freelancer</h3>
                             <h4>Designer und Autor</h4>
                             <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">April 2014</p>
+                            <h3>konplan gmbh</h3>
+                            <h4>IT-Consultant</h4>
+                            <p><strong>Systemarchitektur, Consulting</strong>
+                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">April 2014</p>
+                            <h3>konplan gmbh</h3>
+                            <h4>IT-Consultant</h4>
+                            <p><strong>Systemarchitektur, Consulting</strong>
+                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
+                        </div>
+                    </li>
+                    <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">April 2014</p>
+                            <h3>konplan gmbh</h3>
+                            <h4>IT-Consultant</h4>
+                            <p><strong>Systemarchitektur, Consulting</strong>
+                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und Entitlement nach SOA</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
