--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -97,6 +97,16 @@
             </div>
             <div class="col-md-12">
                 <ul class="timeline">
+                    {% for publication in site.publications %}
+                    <li class="timeline-event" data-aos="fade-up">
+                        <label class="timeline-event-icon"></label>
+                        <div class="timeline-event-copy">
+                            <p class="timeline-event-thumbnail">publication.time</p>
+                            <h3>publication.title</h3>
+                            <h4>publication.extra</h4>
+                          </div>
+                    </li>
+                    {% endfor %}
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
