--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -44,7 +44,7 @@
                 |
                 <li><a href="#experience">Publications</a></li>
                 |
-                <li><a href="#projects">Blogs</a></li>
+                <li><a href="#blog">Blogs</a></li>
                 |
                 <li><a href="#contact">Contact</a></li>
                 |
