--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -101,9 +101,9 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">publication.time</p>
-                            <h3>publication.title</h3>
-                            <h4>publication.extra</h4>
+                            <p class="timeline-event-thumbnail">{{publication.time}}</p>
+                            <h3>{{publication.title}}</h3>
+                            <h4>{{publication.extra}}</h4>
                           </div>
                     </li>
                     {% endfor %}
