--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -105,7 +105,7 @@ layout: default
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
+                            <h3>HERE,Danke! GmbH</h3>
                             <h4>eines Web-Studios</h4>
                             <p><strong>Projektmanagement mit Scrum</strong>
                                 <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt, Yeoman, GIT, JIRA und BrowserStack.</p>
