--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -99,7 +99,7 @@ layout: default
             <div class="col-md-12">
                 <ul class="timeline">
                     {% for publication in site.publications %}
-                      {{publication.content}}
+                      {{ publication }}
                     {% else %}
                       <h3>No Publications</h3>
                     {% endfor %}
