--- a/_layouts/default_cool.html
+++ b/_layouts/default_cool.html
@@ -99,7 +99,12 @@ layout: default
             <div class="col-md-12">
                 <ul class="timeline">
                     {% for publication in site.publications %}
-                      {{ publication }}
+                      <li class="timeline-event" data-aos="fade-up">
+                          <label class="timeline-event-icon"></label>
+                          <div class="timeline-event-copy">
+                              <h3>HERE,Danke! GmbH</h3>
+                          </div>
+                      </li>
                     {% else %}
                       <h3>No Publications</h3>
                     {% endfor %}
