--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -135,8 +135,8 @@ layout: default
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".stability">Stability</a></li>
-                                    <li><a href="" data-filter=".o_control">Optimal Control</a></li>
+                                    <li><a href="" data-filter=".fashion">fashion</a></li>
+                                    <li><a href="" data-filter=".o_control">optimal control</a></li>
                                     <li><a href="" data-filter=".graphics">Imitation Learning</a></li>
                                     <li><a href="" data-filter=".ads">Reinforcement Learning</a></li>
                                     <li><a href="" data-filter=".fashion">Representation Learning</a></li>
