--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -184,20 +184,14 @@ layout: default
             </div>
             <div class="col-md-4" data-aos="fade-up">
 
-                <h3>Phone Number</h3>
-                <p>+20 5555 569 42</p>
-                <h3> Mobile Numberr</h3>
-                <p>+20 5555 569 42</p>
                 <h3>Email</h3>
-                <p>mail@info.me </p>
+                <p>julen@robot-learning.de </p>
 
                 <h3>Social Network</h3>
 
                 <ul class="social">
-                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
                     <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-                    <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+                    <li><a href="#"><i class="ion-social-github"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
