--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -152,9 +152,9 @@ layout: default
                             <div class="col-md-4 col-sm-6  o_control, stability">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
-                                        <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / Logo</em> </div>
-                                        </div>
+                                      <div class="portfolio-border clearfix">
+                                          <div class="item_info"> <span>Stability Analysis</span> <em>stability</em> </div>
+                                      </div>
                                     </div>
                                 </a>
                             </div>
