--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -150,7 +150,7 @@ layout: default
                           {% for post in site.posts %}
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6 stability">
-                                <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+                                <a href="_posts/index.md" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                       <div class="portfolio-border clearfix">
                                           <div class="item_info"> <span>Stability Analysis</span> <em>stability</em> </div>
