--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -135,7 +135,7 @@ layout: default
                             <nav class="categories">
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
-                                    <li><a href="" data-filter=".photography">Photography</a></li>
+                                    <li><a href="" data-filter=".stability">Stability</a></li>
                                     <li><a href="" data-filter=".logo">Logo</a></li>
                                     <li><a href="" data-filter=".graphics">Graphics</a></li>
                                     <li><a href="" data-filter=".ads">Advertising</a></li>
@@ -172,11 +172,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 photography">
+                            <div class="col-md-4 col-sm-6 stability">
                                 <a id="demo03" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/02.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Photorealistic smartwatch</span> <em>Photography</em> </div>
+                                            <div class="item_info"> <span>Photorealistic smartwatch</span> <em>Stability</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -208,11 +208,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 photography">
+                            <div class="col-md-4 col-sm-6 stability">
                                 <a id="demo06" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/010.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Photorealistic smartwatch</span> <em>Photography</em> </div>
+                                            <div class="item_info"> <span>Photorealistic smartwatch</span> <em>Stability</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -265,7 +265,7 @@ layout: default
         </div>
     </div>
     <!-- ./projects -->
-    
+
     <!-- contact -->
     <div class="section" id="contact">
         <div class="container">
