--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -136,10 +136,10 @@ layout: default
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
                                     <li><a href="" data-filter=".stability">Stability</a></li>
-                                    <li><a href="" data-filter=".logo">Logo</a></li>
-                                    <li><a href="" data-filter=".graphics">Graphics</a></li>
-                                    <li><a href="" data-filter=".ads">Advertising</a></li>
-                                    <li><a href="" data-filter=".fashion">Fashion</a></li>
+                                    <li><a href="" data-filter=".control">control</a></li>
+                                    <li><a href="" data-filter=".imitationlearning">imitationlearning</a></li>
+                                    <li><a href="" data-filter=".reinforcementlearning">Advertising</a></li>
+                                    <li><a href="" data-filter=".Representation Learning">Representation Learning</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -148,11 +148,11 @@ layout: default
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6  fashion logo">
+                            <div class="col-md-4 col-sm-6  Representation Learning control">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / Logo</em> </div>
+                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Representation Learning / control</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -160,11 +160,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 ads graphics">
+                            <div class="col-md-4 col-sm-6 reinforcementlearning imitationlearning">
                                 <a id="demo02" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/03.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Floating mockups</span> <em>Ads / Graphics</em> </div>
+                                            <div class="item_info"> <span>Floating mockups</span> <em>reinforcementlearning / imitationlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -184,11 +184,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 fashion ads">
+                            <div class="col-md-4 col-sm-6 Representation Learning reinforcementlearning">
                                 <a id="demo04" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/04.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Held by hands</span> <em>Fashion / Ads</em> </div>
+                                            <div class="item_info"> <span>Held by hands</span> <em>Representation Learning / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -196,11 +196,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 imitationlearning reinforcementlearning">
                                 <a id="demo05" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/05.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>imitationlearning / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -220,11 +220,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 imitationlearning reinforcementlearning">
                                 <a id="demo07" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/06.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>imitationlearning / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -232,11 +232,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 imitationlearning reinforcementlearning">
                                 <a id="demo08" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/07.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>imitationlearning / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
@@ -244,11 +244,11 @@ layout: default
                             <!-- end single work -->
 
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6 graphics ads">
+                            <div class="col-md-4 col-sm-6 imitationlearning reinforcementlearning">
                                 <a id="demo09" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mobile devices</span> <em>Graphics / Ads</em> </div>
+                                            <div class="item_info"> <span>Mobile devices</span> <em>imitationlearning / reinforcementlearning</em> </div>
                                         </div>
                                     </div>
                                 </a>
