--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -119,11 +119,11 @@ layout: default
     <!-- ./publications -->
 
     <!-- projects -->
-    <div class="section" id="projects">
+    <div class="section" id="blog">
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Projects</h1>
+                <h1 class="size-50">Blog posts</h1>
             </div>
             <!-- main container -->
             <div class="main-container portfolio-inner clearfix">
