--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -136,7 +136,7 @@ layout: default
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
                                     <li><a href="" data-filter=".stability">Stability</a></li>
-                                    <li><a href="" data-filter=".logo">Logo</a></li>
+                                    <li><a href="" data-filter=".optimalcontrol">optimalcontrol</a></li>
                                     <li><a href="" data-filter=".graphics">Graphics</a></li>
                                     <li><a href="" data-filter=".ads">Advertising</a></li>
                                     <li><a href="" data-filter=".fashion">Fashion</a></li>
@@ -148,11 +148,11 @@ layout: default
                         <!-- portfolio_container -->
                         <div class="no-padding portfolio_container clearfix" data-aos="fade-up">
                             <!-- single work -->
-                            <div class="col-md-4 col-sm-6  fashion logo">
+                            <div class="col-md-4 col-sm-6  fashion optimalcontrol">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / Logo</em> </div>
+                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion / optimalcontrol</em> </div>
                                         </div>
                                     </div>
                                 </a>
