--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -123,7 +123,7 @@ layout: default
         <div class="container">
             <div class="col-md-12">
                 <h4>03</h4>
-                <h1 class="size-50">My <br /> Projects</h1>
+                <h1 class="size-50">My <br /> Blog posts</h1>
             </div>
             <!-- main container -->
             <div class="main-container portfolio-inner clearfix">
@@ -136,7 +136,7 @@ layout: default
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
                                     <li><a href="" data-filter=".stability">Stability</a></li>
-                                    <li><a href="" data-filter=".optimalcontrol">optimalcontrol</a></li>
+                                    <li><a href="" data-filter=".optimalcontrol">optimal control</a></li>
                                     <li><a href="" data-filter=".graphics">Graphics</a></li>
                                     <li><a href="" data-filter=".ads">Advertising</a></li>
                                     <li><a href="" data-filter=".fashion">Fashion</a></li>
