--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -192,9 +192,14 @@ layout: default
                 <ul class="social">
                     <li><a href="https://twitter.com/theCamusean"><i class="ion-social-twitter"></i></a></li>
                     <li><a href="https://github.com/TheCamusean"><i class="ion-social-github"></i></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=lx5qencAAAAJ&hl=en" target='blank'><i class="ion-university"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
+                <p>IAS, TU Darmstadt</p>
+                <p>Hochschulstr. 10, Room E225, Building S2|02,
+                64289 Darmstadt(Germany)</p>
+
             </div>
             <div class="col-md-8" data-aos="fade-up">
                 <form class="contact-bg" id="contact-form" name="contact" method="post" novalidate="novalidate">
