--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -6,26 +6,17 @@ title:  "Adding MathJax to a GitHub Pages Jekyll Blog"
 categories: github jekyll
 ---
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{page.title}}</title>
-    <link rel="icon" href="Figures/icon.png" type="image/x-icon">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
-    <!-- main style -->
-    <link href="css/style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
+<!-- home -->
+<div class="section" id="home" data-stellar-background-ratio="0.5">
+    <div class="container">
+        <div class="disply-table">
+            <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
+                <h1><span class='W'>Julen Urain</span></h1>
+                <h4>PhD candidate Robot Learning</h4></div>
+        </div>
+    </div>
+</div>
+<!-- ./home -->
 
 
 <script type="text/x-mathjax-config">
