--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -11,8 +11,8 @@ categories: github jekyll
     <div class="container">
         <div class="disply-table">
             <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                <h1><span class='W'>Julen Urain</span></h1>
-                <h4>PhD candidate Robot Learning</h4></div>
+                <h1><span class='W'>{{page.title}}</span></h1>
+                <h4>{{page.extra}}</h4></div>
         </div>
     </div>
 </div>
