--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -54,4 +54,17 @@ layout: default
         </nav>
     </header>
     <!-- ./header -->
+
+    <!-- home -->
+    <div class="section" id="home" data-stellar-background-ratio="0.5">
+        <div class="container">
+            <div class="disply-table">
+                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
+                    <h1><span class='W'>Julen Urain</span></h1>
+                    <h4>PhD candidate Robot Learning</h4></div>
+            </div>
+        </div>
+    </div>
+    <!-- ./home -->
+
 </body>
