--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -55,4 +55,9 @@ layout: default
     </div>
     <!-- ./home -->
 
+    <div class="section" id="contact">
+      {{content}}
+    </div>
+
+
 </body>
