--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -50,6 +50,7 @@ layout: default
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h1><span class='W'>Julen Urain</span></h1>
                     <h4>PhD candidate Robot Learning</h4></div>
+                </div>
             </div>
         </div>
     </div>
