--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -10,7 +10,7 @@ layout: default
     <title>{{page.title}}</title>
     <!-- <link rel="icon" href="Figures/icon.png" type="image/x-icon"> -->
     <!-- Bootstrap -->
-    <link href="{{ 'css/bootstrap.min.css' | relative_url }}" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ 'ionicons/css/ionicons.min.css' | relative_url }}" rel="stylesheet">
     <link href="{{ 'css/animate.min.css' | relative_url }}" rel="stylesheet">
     <link href="{{ 'css/aos.css' | relative_url }}" rel="stylesheet">
