--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -11,11 +11,11 @@ layout: default
     <!-- <link rel="icon" href="Figures/icon.png" type="image/x-icon"> -->
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ 'ionicons/css/ionicons.min.css' | relative_url }}" rel="stylesheet">
-    <link href="{{ 'css/animate.min.css' | relative_url }}" rel="stylesheet">
-    <link href="{{ 'css/aos.css' | relative_url }}" rel="stylesheet">
+    <link href="ionicons/css/ionicons.min.css'" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/aos.css" rel="stylesheet">
     <!-- main style -->
-    <link href="{{ 'css/style.css' | relative_url }}" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
