--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -10,12 +10,12 @@ layout: default
     <title>{{page.title}}</title>
     <!-- <link rel="icon" href="Figures/icon.png" type="image/x-icon"> -->
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="ionicons/css/ionicons.min.css'" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
+    <link href="{{ 'css/bootstrap.min.css' | prepend: site.baseurl }}" rel="stylesheet">
+    <link href="{{ 'ionicons/css/ionicons.min.css' | prepend: site.baseurl }}" rel="stylesheet">
+    <link href="{{ 'css/animate.min.css' | prepend: site.baseurl }}" rel="stylesheet">
+    <link href="{{ 'css/aos.css' | prepend: site.baseurl }}" rel="stylesheet">
     <!-- main style -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="{{ 'css/style.css' | prepend: site.baseurl }}" rel="stylesheet">
 </head>
 
 <body>
